[package]
name = "kurse"
version = "0.1.1"
edition = "2021"
authors = ["Jochen Görtler <me@jgoertler.com>"]
license = "AGPL-3.0-only"
description = "Personal toolbox for recurring Kubernetes tasks."
homepage = "https://www.jgoertler.com"
repository = "https://github.com/grtlr/kurse"

[dependencies]
kube = "0.93.1"
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
futures = "0.3.30"
tokio = { version = "1.39.1", features = ["full"] }
clap = { version = "4.5.10", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
